GetUserInfoById refactor.
