# internal/identity/dto/user-dto.go
@@ -1,0 +1,10 @@
+package dto
+
+import "time"
+
+type UserDto struct {
+	Email     string    `json:"email"`
+	FirstName string    `json:"first_name"`
+	LastName  string    `json:"last_name"`
+	CreatedAt time.Time `json:"created_at"`
+}
